; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_map_sin.c_Sin_PushNodeStack.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_map_sin.c_Sin_PushNodeStack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nodestackptr = common dso_local global i32* null, align 8
@nodestacksize = common dso_local global i32 0, align 4
@nodestack = common dso_local global i32* null, align 8
@NODESTACKSIZE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [35 x i8] c"Sin_PushNodeStack: stack overflow\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Sin_PushNodeStack(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32*, i32** @nodestackptr, align 8
  store i32 %3, i32* %4, align 4
  %5 = load i32*, i32** @nodestackptr, align 8
  %6 = getelementptr inbounds i32, i32* %5, i32 1
  store i32* %6, i32** @nodestackptr, align 8
  %7 = load i32, i32* @nodestacksize, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @nodestacksize, align 4
  %9 = load i32*, i32** @nodestackptr, align 8
  %10 = load i32*, i32** @nodestack, align 8
  %11 = load i64, i64* @NODESTACKSIZE, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  %13 = icmp uge i32* %9, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = call i32 @Error(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %1
  ret void
}

declare dso_local i32 @Error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
